--- a/Catamagne/Catamagne.csproj
+++ b/Catamagne/Catamagne.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BungieSharper" Version="0.4.0" />
+    <PackageReference Include="BungieSharper" Version="0.5.0" />
     <PackageReference Include="Discord.InteractivityAddon" Version="2.1.1" />
     <PackageReference Include="Discord.Net" Version="2.2.0" />
     <PackageReference Include="Discord.Net.Commands" Version="2.2.0" />
@@ -18,7 +18,7 @@
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00772" />
     <PackageReference Include="Google.Apis.Drive.v3" Version="1.49.0.2201" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.49.0.2175" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.29" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
@@ -26,6 +26,8 @@
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="SteamKit2" Version="2.3.0" />
+    <PackageReference Include="SteamSharp" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
