--- a/Catamagne/Catamagne.csproj
+++ b/Catamagne/Catamagne.csproj
@@ -1,10 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <StartupObject>Catamagne.Core.Core</StartupObject>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <ApplicationIcon>catamagneicon.ico</ApplicationIcon>
+    <AnalysisLevel>5.0</AnalysisLevel>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>false</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
