--- a/Catamagne/Catamagne.csproj
+++ b/Catamagne/Catamagne.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <StartupObject>Catamagne.Core.Core</StartupObject>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <ApplicationIcon>catamagne.ico</ApplicationIcon>
