--- a/Catamagne/Catamagne.csproj
+++ b/Catamagne/Catamagne.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <StartupObject>Catamagne.Core.Core</StartupObject>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <ApplicationIcon>catamagne.ico</ApplicationIcon>
@@ -11,11 +11,11 @@
   <ItemGroup>
     <PackageReference Include="BungieSharper" Version="0.4.0" />
     <PackageReference Include="Discord.InteractivityAddon" Version="2.1.1" />
-    <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00772" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-nightly-00772" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-nightly-00772" />
-    <PackageReference Include="Google.Apis.Drive.v3" Version="1.49.0.2223" />
-    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.49.0.2175" />
+    <PackageReference Include="DSharpPlus" Version="4.0.0-rc2" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-rc2" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-rc2" />
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.50.0.2229" />
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.50.0.2175" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog" Version="2.10.0" />
