--- a/Catamagne/Catamagne.csproj
+++ b/Catamagne/Catamagne.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Google.Apis.Drive.v3" Version="1.50.0.2236" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.50.0.2231" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
+    <PackageReference Include="morelinq" Version="3.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
@@ -30,10 +31,6 @@
     <None Update="credentials.dat">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\" />
   </ItemGroup>
 
 </Project>
